# IDS721

./: .gitignore  .gitmodules  README.md
Individual Project 1/: Cargo.toml  nohup.out
Individual Project 1/WorldCityLocations/: World_Cities_Location_table.csv
Individual Project 1/src/: #main.rs#  main.rs
Individual_Project_1/: Cargo.toml  nohup.out
Individual_Project_1/WorldCityLocations/: World_Cities_Location_table.csv  test.xlsx
Individual_Project_1/src/: main.rs
Individual_Project_2/: Cargo.toml  Dockerfile  Makefile  README.md  libcrypto.so.1.1
Individual_Project_2/src/: lib.rs  main.rs
Individual_Project_3/: Cargo.toml  Multiclass-Resume-Classifier.ipynb  README.md
Individual_Project_3/data/: test.csv  train.csv
Individual_Project_3/src/: main.rs
Individual_Project_4/: Cargo.toml  ProcessDynamoDBRecords.js  README.md  aws_lambda.ipynb  updateTable.js
Individual_Project_4/.ipynb_checkpoints/: aws_lambda-checkpoint.ipynb
Week1/: nohup.out
Week1/src/: main.rs
Week10/: Cargo.toml  README.md
Week10/src/: drawing.rs  game.rs  main.rs  snake.rs
Week11/: Cargo.toml  Makefile  README.md
Week11/src/: main.rs
Week2/: Makefile  bootstrap
Week2/src/: main.rs
Week3/: Cargo.toml  Makefile
Week3/src/: main.rs
Week4/: noah.txt
Week4/src/: lib.rs  main.rs
Week5/: Cargo.toml  Makefile  README.md
Week5/src/: lib.rs  main.rs
Week6/: Cargo.toml  Makefile  README.md
Week6/src/: main.rs
Week7/: Cargo.toml  README.md
Week7/src/: main.rs
Week8/: Cargo.toml  Makefile  README.md
Week8/src/: lib.rs  (+1 more)
Week9/: Cargo.toml  README.md
(+1 files in other folders)
