[package]
name = "week5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.0.32", features=["derive"]}
walkdir = "2.3.2"
md5 = "0.7.0"
sha256 = "1.1.2"
rayon = "1.6.1"

[dev-dependencies]
assert_cmd = "2"
